@@ -65,14 +65,14 @@
 	height: auto;
 }
 
-.tzwb-posts-list .tzwb-postmeta {
+.tzwb-posts-list .tzwb-entry-meta {
 	margin: 0.3em 0 0;
 	padding: 0;
 	font-size: 0.85em;
 	color: #777;
 }
 
-.tzwb-posts-list  .tzwb-postmeta span {
+.tzwb-posts-list  .tzwb-entry-meta span {
 	margin-right: 0.4em;
 }
 
@@ -188,7 +188,7 @@
 	margin: 0.3em 0.8em 0.3em 0;
 }
 
-.tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-postmeta {
+.tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-entry-meta {
 	margin: 0.1em 0;
 	padding: 0;
 	font-size: 0.8em;
