@@ -6,6 +6,7 @@ Version 1.2.8
 -----------------------------------
 [added] escaping for translation strings for improved security
 [improved] structure of post meta functions for better re-usability
+[fixed] postmeta styling for widget bundle
 
 Version 1.2.7
 -----------------------------------
